# django-defender

./: .pre-commit-config.yaml  README.rst  pyproject.toml  tox.ini
.github/workflows/: release.yml  test.yml
defender/: __init__.py  admin.py  config.py  connection.py  models.py  tests.py  utils.py
defender/management/commands/: cleanup_django_defender.py
exampleapp/: urls.py
