[build-system]
requires = ["setuptools>=77", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "django-defender"
description = "redis based Django app that locks out users after too many failed login attempts."
dynamic = ["version"]
readme = "README.rst"
license = "Apache-2.0"
authors = [
    {name = "Ken Cochrane", email = "kencochrane@gmail.com"}
]
keywords = ["django", "cache", "security", "authentication", "throttle", "login"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: Django",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Security",
]
requires-python = ">=3.10"

[project.optional-dependencies]
tests = [
    "mockredispy>=2.9.0.11,<3.0",
    "coverage",
    "celery",
    "django-redis-cache"
]

[tool.setuptools.packages.find]
include = ["defender"]

[tool.setuptools.package-data]
"defender" = ["*"]

[tool.setuptools.dynamic.version]
attr = "defender.__version__"
